--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-  "name": "Bubblescript"
+  "name": "Bubblescript",
+  "dependencies": { },
+  "devDependencies": {
+    "tinyify": "^4.0.0"
+  }
 }
