--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "Bubblescript",
-  "dependencies": { },
-  "devDependencies": {
-    "tinyify": "^4.0.0"
+  "dependencies": {
+    "concurrently": "^9.1.0"
+  },
+"scripts": {
+    "test": "concurrently --kill-others-on-fail --prefix none npm:test:*",
+    "test:sw": "node --import ./test/setup.sw.mjs --test './src/sw/**/*.spec.*'",
+    "test:units": "node --import ./test/setup.units.mjs --test './src/app/**/*.spec.*'",
+    "test:ui": "node --import ./test/setup.ui.mjs --test './src/app/**/*.test.*'"
   }
 }
+
