--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "Bubblescript",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./test/**/*.{js,coffee} --require coffeescript/register"
+  },
+  "dependencies": {
+    "coffeescript": "^2.7.0"
   },
   "devDependencies": {
     "mocha": "^11.0.1"
