--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "mocha ./test/**/*.{js,coffee} --require coffeescript/register"
   },
   "dependencies": {
-    "coffeescript": "^2.7.0"
+    "yaml": "^2.7.0"
   },
   "devDependencies": {
     "chai": "^5.1.2",
