--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "test": "mocha ./test/**/*.js"
   },
   "dependencies": {
+    "parinfer": "^3.13.1",
+    "readline": "^1.3.0",
     "yaml": "^2.7.0"
   },
   "devDependencies": {
